fixes modal visible and form fields left space

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -50,7 +50,7 @@ button {
 }
 
 @media screen and (min-width: 768px) {
-  .modal-wrapper {
+  .js-is-modal-open.modal-wrapper {
     display: none;
   }
 }
